--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   font-family: "bootstrap-icons";
   src: url("../assets/bootstrap-icons/fonts/bootstrap-icons.woff2?2820a3852bdb9a5832199cc61cec4e65") format("woff2"), url("../assets/bootstrap-icons/fonts/bootstrap-icons.woff?2820a3852bdb9a5832199cc61cec4e65") format("woff");
 }
+:root {
+  --bs-tertiary-color: #757779 !important;
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -14427,7 +14431,6 @@ code {
   src: url("../assets/fonts/BCSans/BCSans-BoldItalic.woff2") format("woff2"), url("../assets/fonts/BCSans/BCSans-BoldItalic.woff") format("woff"); /* Modern Browsers */
 }
 html.bcbb-theme {
-  font-size: 16px;
   /*
   input[list],
   input[type='date'],
@@ -14448,16 +14451,6 @@ html.bcbb-theme {
     padding: .33em .66em;
   }
   */
-}
-@media only screen and (min-width: 576px) {
-  html.bcbb-theme {
-    font-size: calc(16px + 6 * (100vw - 320px) / 680);
-  }
-}
-@media only screen and (min-width: 992px) {
-  html.bcbb-theme {
-    font-size: 20px;
-  }
 }
 html.bcbb-theme body {
   font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
@@ -14754,6 +14747,13 @@ html.bcbb-theme kbd {
     -webkit-box-shadow: none !important;
             box-shadow: none !important;
   }
+}
+
+.bcbb-dividers > * {
+  border-bottom: 1px solid var(--bs-light-border-subtle);
+}
+.bcbb-dividers > *:last-child {
+  border-bottom: 0px solid transparent;
 }
 
 h1.page-title::after, .page-title.h1::after {
@@ -15094,6 +15094,53 @@ h1.page-title::after, .page-title.h1::after {
   content: "\f431";
 }
 
+.icon-bi-save {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  margin-left: 1.25em;
+}
+.icon-bi-save::before, .icon-bi-save::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-save::before {
+  margin-left: -1.25em;
+  content: "\f525";
+}
+
+.icon-bi-save-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-bi-save-after::before, .icon-bi-save-after::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-save-after::after {
+  margin-right: -1.25em;
+  content: "\f525";
+}
+
 .icon-bi-search {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -15372,6 +15419,17 @@ h1.page-title::after, .page-title.h1::after {
   min-width: 4em;
 }
 
+@media only screen and (min-width: 992px) {
+  .bcbb-search-wrapper {
+    position: relative;
+  }
+  .bcbb-search-wrapper .bcbb-search-sidebar {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
+
 .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15549,6 +15607,11 @@ ul.bb-subway .summary {
   border-radius: 0;
   position: relative;
   padding: 1em 1em 1em 3em;
+}
+@media only screen and (min-width: 768px) {
+  .bb-collapse .toggle {
+    padding: 0.5em 1em 0.5em 3em;
+  }
 }
 .bb-collapse .toggle::before {
   position: absolute;
