--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -14,6 +14,8 @@
 .icon-bi-funnel-fill-after {@include icon-bi($bi-funnel-fill,true);}
 .icon-bi-info-circle {@include icon-bi($bi-info-circle);}
 .icon-bi-info-circle-after {@include icon-bi($bi-info-circle,true);}
+.icon-bi-save {@include icon-bi($bi-save);}
+.icon-bi-save-after {@include icon-bi($bi-save,true);}
 .icon-bi-search {@include icon-bi($bi-search);}
 .icon-bi-search-after {@include icon-bi($bi-search,true);}
 .icon-bi-trash3 {@include icon-bi($bi-trash3);}
