--- a/scss/overrides/_variables_bootstrap.scss
+++ b/scss/overrides/_variables_bootstrap.scss
@@ -30,3 +30,7 @@ $success:       $colorAlert-success;
 $info:          $colorAlert-info;
 $warning:       $colorAlert-warning;
 $danger:        $colorAlert-error;
+
+:root {
+  --bs-tertiary-color: #757779 !important;
+}
