--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -118,3 +118,11 @@
   }
 }
 
+.bcbb-dividers {
+  > * {
+    border-bottom: 1px solid var(--bs-light-border-subtle);
+    &:last-child {
+      border-bottom: 0px solid transparent;
+    }
+  }
+}
