--- a/css/style.css
+++ b/css/style.css
@@ -15419,7 +15419,7 @@ h1.page-title::after, .page-title.h1::after {
   min-width: 4em;
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 768px) {
   .bcbb-search-wrapper {
     position: relative;
   }
@@ -15427,6 +15427,14 @@ h1.page-title::after, .page-title.h1::after {
     position: absolute;
     right: 0;
     top: 0;
+  }
+  .bcbb-search-wrapper .bcbb-search-input {
+    max-width: 58%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .bcbb-search-wrapper .bcbb-search-input {
+    max-width: 100%;
   }
 }
 
