--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -20,6 +20,8 @@
 .icon-bi-search-after {@include icon-bi($bi-search,true);}
 .icon-bi-trash3 {@include icon-bi($bi-trash3);}
 .icon-bi-trash3-after {@include icon-bi($bi-trash3,true);}
+.icon-bi-x-circle {@include icon-bi($bi-x-circle);}
+.icon-bi-x-circle-after {@include icon-bi($bi-x-circle,true);}
 .icon-bi-x-circle-fill {@include icon-bi($bi-x-circle-fill);}
 .icon-bi-x-circle-fill-after {@include icon-bi($bi-x-circle-fill,true);}
 
