wip adjust regions on 2 col layout

--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -5,7 +5,7 @@
 }
 
 .bcbb-search-wrapper {
-  @include responsive($md-min) {
+  @include responsive($lg-min) {
     position: relative;
     .bcbb-search-sidebar {
       position: absolute;
