--- a/templates/blocks/facets-result-item.html.twig
+++ b/templates/blocks/facets-result-item.html.twig
@@ -16,7 +16,7 @@
  * @ingroup themeable
  */
 #}
-<div class="d-flex justify-content-between align-items-start mb-2">
+<div class="d-flex justify-content-between align-items-start mb-2 bcbb-facet-result">
   
   {% if is_active %}
     <div class="ms-n5">
