--- a/templates/blocks/facets-summary-item-list.html.twig
+++ b/templates/blocks/facets-summary-item-list.html.twig
@@ -52,12 +52,15 @@
   {%- endif -%}
 
   {%- if items -%}
-    <{{ list_type }}{{ attributes }}>
-      {%- for item in items -%}
-        <li{{ item.attributes.addClass(item_classes) }}>{{ item.value }}</li>
-      {%- endfor -%}
-    </{{ list_type }}>
-  {%- else -%}
-    {{- empty -}}
+    <div class="row">
+      <{{ list_type }}{{ attributes.addClass('bcbb-current-search-facets', 'col-lg-7', 'ms-4') }}>
+        {%- for item in items -%}
+          <li{{ item.attributes.addClass(item_classes) }}>{{ item.value }}</li>
+        {%- endfor -%}
+      </{{ list_type }}>
+    {%- else -%}
+      {{- empty -}}
+    </div>
   {%- endif -%}
+
 {%- endif %}
