--- a/templates/blocks/facets-summary-item-list.html.twig
+++ b/templates/blocks/facets-summary-item-list.html.twig
@@ -54,8 +54,7 @@
   {%- if items -%}
     <{{ list_type }}{{ attributes }}>
       {%- for item in items -%}
-      
-        <li{{ item.attributes.addClass(item_classes) }}>{{ item.value }}</i></li>
+        <li{{ item.attributes.addClass(item_classes) }}>{{ item.value }}</li>
       {%- endfor -%}
     </{{ list_type }}>
   {%- else -%}
