--- a/templates/blocks/facets-result-item.html.twig
+++ b/templates/blocks/facets-result-item.html.twig
@@ -16,10 +16,15 @@
  * @ingroup themeable
  */
 #}
-{% if is_active %}
-  <span class="facet-item__status js-facet-deactivate">(-)</span>
-{% endif %}
-<span class="facet-item__value">{{ value }}</span>
-{% if show_count %}
-  <span class="facet-item__count">({{ count }})</span>
-{% endif %}
+<div class="d-flex justify-content-between align-items-start mb-2 bcbb-facet-result">
+  {% if is_active %}
+    <div class="ms-n5">
+      <span class="facet-item__value js-facet-deactivate icon-bi-x-circle pe-2" aria-label="{{ 'Remove facet'|t }}">{{ value }}</span>
+    </div>
+  {% else %}
+    <span class="facet-item__value pe-2">{{ value }}</span>
+  {% endif %}
+  {% if show_count %}
+    <span class="badge badge-facet rounded-pill text-bg-dark">{{ count }}</span>
+  {% endif %}
+</div>
