Issue #17: Update SCSS for search theming
MFIN-Data-Catalogue issue 214.

--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -126,3 +126,25 @@
     }
   }
 }
+
+// negative margins
+
+.ms-n1 {
+  margin-left: -0.25em !important;
+}
+
+.ms-n2 {
+  margin-left: -0.5em !important;
+}
+
+.ms-n3 {
+  margin-left: -0.75em !important;
+}
+
+.ms-n4 {
+  margin-left: -1em !important;
+}
+
+.ms-n5 {
+  margin-left: -1.25em !important;
+}
