--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -82,6 +82,17 @@
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='filter' xmlns='http://www.w3.org/2000/svg' width='171.43' height='100' viewBox='0 0 171.43 100'%3E%3Cpath d='m57.14,92.86c0-3.94,3.2-7.14,7.14-7.14h42.86c3.94,0,7.14,3.2,7.14,7.14s-3.2,7.14-7.14,7.14h-42.86c-3.94,0-7.14-3.2-7.14-7.14Z' fill='#{svg-color($iconColor)}'/%3E%3Cpath d='m28.57,50c0-3.94,3.2-7.14,7.14-7.14h100c3.94,0,7.14,3.2,7.14,7.14s-3.2,7.14-7.14,7.14H35.71c-3.94,0-7.14-3.2-7.14-7.14Z' fill='#{svg-color($iconColor)}'/%3E%3Cpath d='m0,7.14C0,3.2,3.2,0,7.14,0h157.14c3.94,0,7.14,3.2,7.14,7.14s-3.2,7.14-7.14,7.14H7.14c-3.94,0-7.14-3.2-7.14-7.14Z' fill='#{svg-color($iconColor)}'/%3E%3C/svg%3E");
 }
 
+@mixin icon-cancel($iconColor: $colorCurrent) {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{svg-color($iconColor)}' viewBox='0 0 16 16'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+}
+
+@mixin bs-transition() {
+  transition: color 0.15s ease-in-out,
+  background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out,
+  box-shadow 0.15s ease-in-out;
+}
+
 // Bootstrap icons
 @mixin icon-bi($icon, $after:false) {
   display: inline-flex;
