--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -20,6 +20,8 @@
 .icon-bi-search-after {@include icon-bi($bi-search,true);}
 .icon-bi-trash3 {@include icon-bi($bi-trash3);}
 .icon-bi-trash3-after {@include icon-bi($bi-trash3,true);}
+.icon-bi-x-circle {@include icon-bi($bi-x-circle);}
+.icon-bi-x-circle-after {@include icon-bi($bi-x-circle,true);}
 .icon-bi-x-circle-fill {@include icon-bi($bi-x-circle-fill);}
 .icon-bi-x-circle-fill-after {@include icon-bi($bi-x-circle-fill,true);}
 
@@ -28,8 +30,8 @@
 }
 
 .focus-underline {
-  &:hover, 
-  &:focus, 
+  &:hover,
+  &:focus,
   &:active {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='1'%3E%3Cline x1='0' y1='0.5' x2='10' y2='0.5' style='stroke: currentColor; stroke-width: 1;' /%3E%3C/svg%3E");
     background-repeat: repeat-x;
