--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -164,7 +164,7 @@
   .btn {
     position: absolute;
     right: 0;
-    top: 0;
+    bottom: 0;
     margin-right: 0;
     border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
     color: $colorWhite;
