261 - dc cat, update pager link color

--- a/css/style.css
+++ b/css/style.css
@@ -14439,6 +14439,11 @@ code {
       flex-shrink: unset;
 }
 
+.bcbb-theme a.page-link,
+.bcbb-theme a.page-link:visited {
+  color: var(--bs-pagination-active-bg);
+}
+
 @font-face {
   font-family: "BCSans";
   font-style: normal;
