--- a/scss/overrides/_drupal.scss
+++ b/scss/overrides/_drupal.scss
@@ -4,4 +4,13 @@
   a.page-link:visited {
     color: var(--bs-pagination-active-bg);
   }
+
+  li.is-active,
+  li.active {
+    a.page-link,
+    a.page-link:visited {
+    color: var(--bs-pagination-active-color);
+  }
+
+  }
 }
