--- a/css/style.css
+++ b/css/style.css
@@ -14797,6 +14797,10 @@ html.bcbb-theme kbd {
   margin-left: -1.25em !important;
 }
 
+.bcbb-fw {
+  margin: 0px calc(50% - 50vw);
+}
+
 h1.page-title::after, .page-title.h1::after {
   border-bottom: 0.18em solid #fcba19;
   content: "";
